<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MenuActivity">

    <Button
        android:id="@+id/btnLocations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSelectActivity"
        android:text="@string/btnLocations" />

    <Button
        android:id="@+id/btnCounters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSelectActivity"
        android:text="@string/btnCounters" />

    <Button
        android:id="@+id/btnRates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSelectActivity"
        android:text="@string/btnRates" />

    <Button
        android:id="@+id/btnMeasurements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSelectActivity"
        android:text="@string/btnMeasurements" />
</LinearLayout>